# drf-lambda-project

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  cookiecutter.json  docker-compose.yml  pyproject.toml
.aws/: app.py  production.toml  staging.toml
.aws/post_deploy/: handler.py
.aws/pre_deploy/: handler.py
.github/workflows/: deploy.yml  release.yml  test.yml
dev/: dev.env  settings.py  urls.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
docs/.doctrees/: environment.pickle  index.doctree
docs/_static/: documentation_options.js
documentation/: README.md  conf.py  index.rst
factories/: users.py
scripts/: docs_autobuild.py  docs_build.py  load_env.py  manage.py  server.py  tests.py
src/CHANGE_ME/: manage.py  settings.py  urls.py  wsgi.py
src/CHANGE_ME/apps/contrib/sites/migrations/: 0001_initial.py  0003_set_site_domain_and_name.py
src/CHANGE_ME/commands/: apps.py
src/CHANGE_ME/commands/management/commands/: create_default_admin_user.py
src/CHANGE_ME/db/: apps.py
src/CHANGE_ME/db/migrations/: 0001_initial.py
src/CHANGE_ME/static/css/: project.css
src/CHANGE_ME/templates/: base.html  home.html
src/CHANGE_ME/templates/admin/: base.html
src/CHANGE_ME/utils/: lambda_handlers.py
tests/: settings.py  test_health_check.py  test_version.py
tests/unit_tests/apps/: test_sites_migration.py
tests/unit_tests/commands/: test_create_default_admin_user.py
tests/unit_tests/utils/: test_lambda_handlers.py
{{ cookiecutter.repo_name }}/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
{{ cookiecutter.repo_name }}/.github/workflows/: deploy.yml  release.yml  test.yml
{{ cookiecutter.repo_name }}/dev/: dev.env  settings.py  urls.py
{{ cookiecutter.repo_name }}/documentation/: conf.py  index.rst
{{ cookiecutter.repo_name }}/scripts/: load_env.py  server.py  startapp.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.src_package_name }}/: manage.py  settings.py  urls.py  wsgi.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.src_package_name }}/apps/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.src_package_name }}/commands/: apps.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.src_package_name }}/static/js/: project.js
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.src_package_name }}/templates/: base.html  home.html
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.src_package_name }}/templates/admin/: base.html
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.src_package_name }}/utils/: lambda_handlers.py
{{ cookiecutter.repo_name }}/templates/django/apps/: apps.py  models.py
{{ cookiecutter.repo_name }}/tests/: conftest.py  settings.py
{{ cookiecutter.repo_name }}/tests/admin_tests/: test_users_admin.py
{{ cookiecutter.repo_name }}/tests/unit_tests/: test_version.py
{{ cookiecutter.repo_name }}/tests/unit_tests/utils/: test_lambda_handlers.py
